# siri

./: .env.example  AGENTS.md  README.md  com.siri.plist.template  com.siri.simple.plist.template  com.siri.voice-memos.plist.template  pyproject.toml
docs/: voice-memos-shortcuts.md
src/: import_voice_memos.py  install_launchd.sh  obsidian_audio_routing_endpoints.json  render_codex_audio_prompt.py  run_simple_ingest.sh  run_voice_memos_ingest.sh  runtime_support.py  simple_endpoints.py  siri.sh  transcribe.py
