[project]
name = "siri"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai",
    "send2trash>=2.1.0",
]

[project.scripts]
siri = "src.transcribe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "src/__init__.py",
    "src/import_voice_memos.py",
    "src/runtime_support.py",
    "src/simple_endpoints.py",
    "src/transcribe.py",
]
